KTXGen/KTXGen/Headers/ktx.h


typedef unsigned char ktx_uint8_t;
typedef bool ktx_bool_t;
typedef unsigned __int32 ktx_uint32_t;
typedef          size_t  ktx_size_t;
typedef uint32_t ktx_uint32_t;
typedef   size_t ktx_size_t;
  typedef unsigned int GLenum;
  typedef unsigned int GLuint;
typedef enum ktx_error_code_e {
    KTX_SUCCESS = 0,         
    KTX_FILE_DATA_ERROR,     
    KTX_FILE_ISPIPE,         
    KTX_FILE_OPEN_FAILED,    
    KTX_FILE_OVERFLOW,       
    KTX_FILE_READ_ERROR,     
    KTX_FILE_SEEK_ERROR,     
    KTX_FILE_UNEXPECTED_EOF, 
    KTX_FILE_WRITE_ERROR,    
    KTX_GL_ERROR,            
    KTX_INVALID_OPERATION,   
    KTX_INVALID_VALUE,       
    KTX_NOT_FOUND,           
    KTX_OUT_OF_MEMORY,       
    KTX_TRANSCODE_FAILED,    
    KTX_UNKNOWN_FILE_FORMAT, 
    KTX_UNSUPPORTED_TEXTURE_TYPE, 
    KTX_UNSUPPORTED_FEATURE,  
    KTX_LIBRARY_NOT_LINKED,  
    KTX_DECOMPRESS_LENGTH_ERROR, 
    KTX_DECOMPRESS_CHECKSUM_ERROR, 
    KTX_ERROR_MAX_ENUM = KTX_DECOMPRESS_CHECKSUM_ERROR 
} ktx_error_code_e;
typedef struct ktxStream ktxStream;
typedef struct ktxTexture {
    KTXTEXTURECLASSDEFN
} ktxTexture;
typedef KTX_error_code
    (* PFNKTXITERCB)(int miplevel, int face,
                     int width, int height, int depth,
                     ktx_uint64_t faceLodSize,
                     void* pixels, void* userdata);
typedef struct ktxTexture1 {
    KTXTEXTURECLASSDEFN
    ktx_uint32_t glFormat; 
    ktx_uint32_t glInternalformat; 
    ktx_uint32_t glBaseInternalformat; 
    ktx_uint32_t glType; 
    struct ktxTexture1_private* _private; 
} ktxTexture1;
typedef enum ktxSupercmpScheme {
    KTX_SS_NONE = 0,            
    KTX_SS_BASIS_LZ = 1,        
    KTX_SS_ZSTD = 2,            
    KTX_SS_ZLIB = 3,            
    KTX_SS_BEGIN_RANGE = KTX_SS_NONE,
    KTX_SS_END_RANGE = KTX_SS_ZLIB,
    KTX_SS_BEGIN_VENDOR_RANGE = 0x10000,
    KTX_SS_END_VENDOR_RANGE = 0x1ffff,
    KTX_SS_BEGIN_RESERVED = 0x20000
} ktxSupercmpScheme;
typedef struct ktxTexture2 {
    KTXTEXTURECLASSDEFN
    ktx_uint32_t  vkFormat;
    ktx_uint32_t* pDfd;
    ktxSupercmpScheme supercompressionScheme;
    ktx_bool_t isVideo;
    ktx_uint32_t duration;
    ktx_uint32_t timescale;
    ktx_uint32_t loopcount;
    struct ktxTexture2_private* _private;  
} ktxTexture2;
    #define ktxTexture(t) ((ktxTexture*)t)
typedef struct
{
    ktx_uint32_t glInternalformat; 
    ktx_uint32_t vkFormat;   
    ktx_uint32_t* pDfd;      
    ktx_uint32_t baseWidth;  
    ktx_uint32_t baseHeight; 
    ktx_uint32_t baseDepth;  
    ktx_uint32_t numDimensions; 
    ktx_uint32_t numLevels; 
    ktx_uint32_t numLayers; 
    ktx_uint32_t numFaces;  
    ktx_bool_t   isArray;  
    ktx_bool_t   generateMipmaps; 
} ktxTextureCreateInfo;
typedef enum {
    KTX_TEXTURE_CREATE_NO_STORAGE = 0,  
    KTX_TEXTURE_CREATE_ALLOC_STORAGE = 1 
} ktxTextureCreateStorageEnum;
typedef ktx_uint32_t ktxTextureCreateFlags;
  typedef unsigned __int64 ktx_off_t;
  typedef   off_t ktx_off_t;
typedef struct ktxMem ktxMem;
typedef struct ktxStream ktxStream;
enum streamType { eStreamTypeFile = 1, eStreamTypeMemory = 2, eStreamTypeCustom = 3 };
typedef KTX_error_code (*ktxStream_read)(ktxStream* str, void* dst,
                                         const ktx_size_t count);
typedef KTX_error_code (*ktxStream_skip)(ktxStream* str,
                                         const ktx_size_t count);
typedef KTX_error_code (*ktxStream_write)(ktxStream* str, const void *src,
                                          const ktx_size_t size,
                                          const ktx_size_t count);
typedef KTX_error_code (*ktxStream_getpos)(ktxStream* str, ktx_off_t* const offset);
typedef KTX_error_code (*ktxStream_setpos)(ktxStream* str, const ktx_off_t offset);
typedef KTX_error_code (*ktxStream_getsize)(ktxStream* str, ktx_size_t* const size);
typedef void (*ktxStream_destruct)(ktxStream* str);
struct ktxStream
{
    ktxStream_read read;   
    ktxStream_skip skip;   
    ktxStream_write write; 
    ktxStream_getpos getpos; 
    ktxStream_setpos setpos; 
    ktxStream_getsize getsize; 
    ktxStream_destruct destruct; 
    enum streamType type;
    union {
        FILE* file;        
        ktxMem* mem;       
        struct
        {
            void* address;           
            void* allocatorAddress;  
            ktx_size_t size;         
        } custom_ptr;      
    } data;                
    ktx_off_t readpos;     
    ktx_bool_t closeOnDestruct; 
};
typedef PFNVOIDFUNCTION (KTX_APIENTRY* PFNGLGETPROCADDRESS) (const char *proc);
KTX_API KTX_error_code KTX_APIENTRY
ktxLoadOpenGL(PFNGLGETPROCADDRESS pfnGLGetProcAddress);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture_CreateFromStdioStream(FILE* stdioStream,
                                 ktxTextureCreateFlags createFlags,
                                 ktxTexture** newTex);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture_CreateFromNamedFile(const char* const filename,
                               ktxTextureCreateFlags createFlags,
                               ktxTexture** newTex);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture_CreateFromMemory(const ktx_uint8_t* bytes, ktx_size_t size,
                            ktxTextureCreateFlags createFlags,
                            ktxTexture** newTex);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture_CreateFromStream(ktxStream* stream,
                            ktxTextureCreateFlags createFlags,
                            ktxTexture** newTex);
KTX_API ktx_uint8_t* KTX_APIENTRY
ktxTexture_GetData(ktxTexture* This);
KTX_API ktx_uint32_t KTX_APIENTRY
ktxTexture_GetRowPitch(ktxTexture* This, ktx_uint32_t level);
KTX_API ktx_uint32_t KTX_APIENTRY
ktxTexture_GetElementSize(ktxTexture* This);
KTX_API ktx_size_t KTX_APIENTRY
ktxTexture_GetDataSize(ktxTexture* This);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture_GLUpload(ktxTexture* This, GLuint* pTexture, GLenum* pTarget,
                    GLenum* pGlerror);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture_IterateLevelFaces(ktxTexture* This, PFNKTXITERCB iterCb,
                             void* userdata);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_Create(const ktxTextureCreateInfo* const createInfo,
                   ktxTextureCreateStorageEnum storageAllocation,
                   ktxTexture1** newTex);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_CreateFromStdioStream(FILE* stdioStream,
                                 ktxTextureCreateFlags createFlags,
                                 ktxTexture1** newTex);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_CreateFromNamedFile(const char* const filename,
                               ktxTextureCreateFlags createFlags,
                               ktxTexture1** newTex);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_CreateFromMemory(const ktx_uint8_t* bytes, ktx_size_t size,
                            ktxTextureCreateFlags createFlags,
                            ktxTexture1** newTex);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_CreateFromStream(ktxStream* stream,
                             ktxTextureCreateFlags createFlags,
                             ktxTexture1** newTex);
KTX_API void KTX_APIENTRY
ktxTexture1_Destroy(ktxTexture1* This);
KTX_API ktx_bool_t KTX_APIENTRY
ktxTexture1_NeedsTranscoding(ktxTexture1* This);
KTX_API ktx_error_code_e KTX_APIENTRY
ktxTexture1_LoadImageData(ktxTexture1* This, ktx_uint8_t* pBuffer, ktx_size_t bufSize);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_WriteToStdioStream(ktxTexture1* This, FILE* dstsstr);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_WriteToNamedFile(ktxTexture1* This, const char* const dstname);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_WriteToMemory(ktxTexture1* This,
                             ktx_uint8_t** bytes, ktx_size_t* size);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_WriteToStream(ktxTexture1* This, ktxStream *dststr);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_WriteKTX2ToStdioStream(ktxTexture1* This, FILE* dstsstr);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_WriteKTX2ToNamedFile(ktxTexture1* This, const char* const dstname);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_WriteKTX2ToMemory(ktxTexture1* This,
                             ktx_uint8_t** bytes, ktx_size_t* size);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture1_WriteKTX2ToStream(ktxTexture1* This, ktxStream *dststr);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_Create(const ktxTextureCreateInfo* const createInfo,
                   ktxTextureCreateStorageEnum storageAllocation,
                   ktxTexture2** newTex);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_CreateCopy(ktxTexture2* orig, ktxTexture2** newTex);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_CreateFromStdioStream(FILE* stdioStream,
                                 ktxTextureCreateFlags createFlags,
                                 ktxTexture2** newTex);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_CreateFromNamedFile(const char* const filename,
                               ktxTextureCreateFlags createFlags,
                               ktxTexture2** newTex);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_CreateFromMemory(const ktx_uint8_t* bytes, ktx_size_t size,
                            ktxTextureCreateFlags createFlags,
                            ktxTexture2** newTex);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_CreateFromStream(ktxStream* stream,
                             ktxTextureCreateFlags createFlags,
                             ktxTexture2** newTex);
KTX_API void KTX_APIENTRY
ktxTexture2_Destroy(ktxTexture2* This);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_CompressBasis(ktxTexture2* This, ktx_uint32_t quality);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_DeflateZstd(ktxTexture2* This, ktx_uint32_t level);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_DeflateZLIB(ktxTexture2* This, ktx_uint32_t level);
KTX_API void KTX_APIENTRY
ktxTexture2_GetComponentInfo(ktxTexture2* This, ktx_uint32_t* numComponents,
                             ktx_uint32_t* componentByteLength);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_GetImageOffset(ktxTexture2* This, ktx_uint32_t level,
                           ktx_uint32_t layer, ktx_uint32_t faceSlice,
                           ktx_size_t* pOffset);
KTX_API ktx_uint32_t KTX_APIENTRY
ktxTexture2_GetNumComponents(ktxTexture2* This);
KTX_API khr_df_transfer_e KTX_APIENTRY
ktxTexture2_GetTransferFunction_e(ktxTexture2* This);
KTX_API khr_df_transfer_e KTX_APIENTRY
ktxTexture2_GetOETF_e(ktxTexture2* This);
KTX_API ktx_uint32_t KTX_APIENTRY
ktxTexture2_GetOETF(ktxTexture2* This);
KTX_API khr_df_model_e KTX_APIENTRY
ktxTexture2_GetColorModel_e(ktxTexture2* This);
KTX_API ktx_bool_t KTX_APIENTRY
ktxTexture2_GetPremultipliedAlpha(ktxTexture2* This);
KTX_API khr_df_primaries_e KTX_APIENTRY
ktxTexture2_GetPrimaries_e(ktxTexture2* This);
KTX_API ktx_bool_t KTX_APIENTRY
ktxTexture2_NeedsTranscoding(ktxTexture2* This);
KTX_API ktx_error_code_e KTX_APIENTRY
ktxTexture2_SetTransferFunction(ktxTexture2* This, khr_df_transfer_e tf);
KTX_API ktx_error_code_e KTX_APIENTRY
ktxTexture2_SetOETF(ktxTexture2* This, khr_df_transfer_e oetf);
KTX_API ktx_error_code_e KTX_APIENTRY
ktxTexture2_SetPrimaries(ktxTexture2* This, khr_df_primaries_e primaries);
KTX_API ktx_error_code_e KTX_APIENTRY
ktxTexture2_LoadImageData(ktxTexture2* This, ktx_uint8_t* pBuffer, ktx_size_t bufSize);
KTX_API ktx_error_code_e KTX_APIENTRY
ktxTexture2_LoadDeflatedImageData(ktxTexture2* This,
                                  ktx_uint8_t* pBuffer, ktx_size_t bufSize);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_WriteToStdioStream(ktxTexture2* This, FILE* dstsstr);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_WriteToNamedFile(ktxTexture2* This, const char* const dstname);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_WriteToMemory(ktxTexture2* This,
                             ktx_uint8_t** bytes, ktx_size_t* size);
KTX_API KTX_error_code KTX_APIENTRY
ktxTexture2_WriteToStream(ktxTexture2* This, ktxStream *dststr);