KTXGen/Evergine.Bindings.KTX/Generated/Funtions.cs

using System;
using System.Runtime.InteropServices;

namespace Evergine.Bindings.MeshOptimizer
{
	public static unsafe partial class MeshOptNative
	{
		/// <summary>
		/// Load pointers for the OpenGL functions needed by ktxTexture_GLUpload.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxLoadOpenGL( pfnGLGetProcAddress);

		/// <summary>
		/// These four create a ktxTexture1 or ktxTexture2 according to the data
		/// header, and return a pointer to the base ktxTexture class.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture_CreateFromStdioStream(* stdioStream,  createFlags, ktxTexture* newTex);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture_CreateFromNamedFile(byte* filename,  createFlags, ktxTexture* newTex);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture_CreateFromMemory(* bytes,  size,  createFlags, ktxTexture* newTex);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture_CreateFromStream(ktxStream* stream,  createFlags, ktxTexture* newTex);

		/// <summary>
		/// Returns a pointer to the image data of a ktxTexture object.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern * ktxTexture_GetData(ktxTexture* This);

		/// <summary>
		/// Returns the pitch of a row of an image at the specified level.
		/// Similar to the rowPitch in a VkSubResourceLayout.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern  ktxTexture_GetRowPitch(ktxTexture* This,  level);

		/// <summary>
		/// Return the element size of the texture's images.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern  ktxTexture_GetElementSize(ktxTexture* This);

		/// <summary>
		/// Returns the size of all the image data of a ktxTexture object in bytes.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern  ktxTexture_GetDataSize(ktxTexture* This);

		/// <summary>
		/// Uploads a texture to OpenGL {,ES}. 
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture_GLUpload(ktxTexture* This, * pTexture, * pTarget, * pGlerror);

		/// <summary>
		/// Iterate over the levels or faces in a ktxTexture object.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture_IterateLevelFaces(ktxTexture* This,  iterCb, void* userdata);

		/// <summary>
		/// Create a new ktxTexture1.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_Create(ktxTextureCreateInfo* createInfo, ktxTextureCreateStorageEnum storageAllocation, ktxTexture1* newTex);

		/// <summary>
		/// These four create a ktxTexture1 provided the data is in KTX format.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_CreateFromStdioStream(* stdioStream,  createFlags, ktxTexture1* newTex);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_CreateFromNamedFile(byte* filename,  createFlags, ktxTexture1* newTex);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_CreateFromMemory(* bytes,  size,  createFlags, ktxTexture1* newTex);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_CreateFromStream(ktxStream* stream,  createFlags, ktxTexture1* newTex);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern void ktxTexture1_Destroy(ktxTexture1* This);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern  ktxTexture1_NeedsTranscoding(ktxTexture1* This);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_LoadImageData(ktxTexture1* This, * pBuffer,  bufSize);

		/// <summary>
		/// These four write a ktxTexture1 object to a KTX v1 file.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_WriteToStdioStream(ktxTexture1* This, * dstsstr);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_WriteToNamedFile(ktxTexture1* This, byte* dstname);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_WriteToMemory(ktxTexture1* This, * bytes, * size);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_WriteToStream(ktxTexture1* This, ktxStream* dststr);

		/// <summary>
		/// These four write a ktxTexture1 object to a KTX v2 file.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_WriteKTX2ToStdioStream(ktxTexture1* This, * dstsstr);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_WriteKTX2ToNamedFile(ktxTexture1* This, byte* dstname);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_WriteKTX2ToMemory(ktxTexture1* This, * bytes, * size);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture1_WriteKTX2ToStream(ktxTexture1* This, ktxStream* dststr);

		/// <summary>
		/// Create a new ktxTexture2.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_Create(ktxTextureCreateInfo* createInfo, ktxTextureCreateStorageEnum storageAllocation, ktxTexture2* newTex);

		/// <summary>
		/// Create a new ktxTexture2 as a copy of an existing texture.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_CreateCopy(ktxTexture2* orig, ktxTexture2* newTex);

		/// <summary>
		/// These four create a ktxTexture2 provided the data is in KTX2 format.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_CreateFromStdioStream(* stdioStream,  createFlags, ktxTexture2* newTex);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_CreateFromNamedFile(byte* filename,  createFlags, ktxTexture2* newTex);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_CreateFromMemory(* bytes,  size,  createFlags, ktxTexture2* newTex);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_CreateFromStream(ktxStream* stream,  createFlags, ktxTexture2* newTex);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern void ktxTexture2_Destroy(ktxTexture2* This);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_CompressBasis(ktxTexture2* This,  quality);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_DeflateZstd(ktxTexture2* This,  level);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_DeflateZLIB(ktxTexture2* This,  level);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern void ktxTexture2_GetComponentInfo(ktxTexture2* This, * numComponents, * componentByteLength);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_GetImageOffset(ktxTexture2* This,  level,  layer,  faceSlice, * pOffset);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern  ktxTexture2_GetNumComponents(ktxTexture2* This);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern  ktxTexture2_GetTransferFunction_e(ktxTexture2* This);

		/// <summary>
		/// For backward compatibility. 
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern  ktxTexture2_GetOETF_e(ktxTexture2* This);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern  ktxTexture2_GetOETF(ktxTexture2* This);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern  ktxTexture2_GetColorModel_e(ktxTexture2* This);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern  ktxTexture2_GetPremultipliedAlpha(ktxTexture2* This);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern  ktxTexture2_GetPrimaries_e(ktxTexture2* This);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern  ktxTexture2_NeedsTranscoding(ktxTexture2* This);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_SetTransferFunction(ktxTexture2* This,  tf);

		/// <summary>
		/// For backward compatibility. 
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_SetOETF(ktxTexture2* This,  oetf);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_SetPrimaries(ktxTexture2* This,  primaries);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_LoadImageData(ktxTexture2* This, * pBuffer,  bufSize);

		/// <summary>
		/// For rare testing scenarios. Use ktxTexture2_LoadImageData.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_LoadDeflatedImageData(ktxTexture2* This, * pBuffer,  bufSize);

		/// <summary>
		/// These four write a ktxTexture2 object to a KTX v2 file.
		/// </summary>
		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_WriteToStdioStream(ktxTexture2* This, * dstsstr);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_WriteToNamedFile(ktxTexture2* This, byte* dstname);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_WriteToMemory(ktxTexture2* This, * bytes, * size);

		[DllImport("meshoptimizer", CallingConvention = CallingConvention.Cdecl)]
		public static extern ktx_error_code_e ktxTexture2_WriteToStream(ktxTexture2* This, ktxStream* dststr);
